--- a/csf_assign04/Makefile
+++ b/csf_assign04/Makefile
@@ -1,7 +1,7 @@
 CC = gcc
 CFLAGS = -g -Wall -Wextra -pedantic -std=c11 -fPIC
 
-PLUGIN_SRCS = swapbg.c mirrorh.c mirrorv.c
+PLUGIN_SRCS = swapbg.c mirrorh.c mirrorv.c tile.c
 #mirrorh.c mirrorv.c tile.c expose.c
 SRCS = imgproc.c pnglite.c $(PLUGIN_SRCS)
 
@@ -25,6 +25,8 @@ plugins/swapbg.so : swapbg.o
 plugins/mirrorh.so: mirrorh.o
 
 plugins/mirrorv.so: mirrorv.o
+
+plugins/tile.so: tile.o
 
 clean :
 	rm -f *.o imgproc plugins/*.so depend.mak
